--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
 background:black;
 color:white;
-font-family:sans-serif;
+font-family:Arial;
 text-align:center;
 }
 
@@ -14,9 +14,10 @@ padding:10px 20px;
 margin:5px;
 }
 
-.rules div{
-margin:10px;
-font-size:18px;
+.box{
+margin-top:20px;
+border:1px solid white;
+padding:10px;
 }
 
 #final{
