--- a/style.css
+++ b/style.css
@@ -1,27 +1,29 @@
 body{
 background:black;
 color:white;
-font-family:Arial;
+font-family:serif;
 text-align:center;
-}
-
-.app{
 padding:20px;
 }
 
-.toggle button{
+button{
 padding:10px 20px;
-margin:5px;
+margin:10px;
+font-size:16px;
 }
 
 .box{
-margin-top:20px;
 border:1px solid white;
-padding:10px;
+padding:20px;
+margin:20px;
 }
 
-#final{
+p{
+font-size:18px;
+cursor:pointer;
+}
+
+.check{
 margin-top:20px;
-font-size:22px;
-font-weight:bold;
+font-size:18px;
 }
